sens for direct effect w/ binary mediator (not fully tested yet)

--- a/inst/doc/mediation.tex
+++ b/inst/doc/mediation.tex
@@ -95,32 +95,32 @@ pdfstartview=FitH, breaklinks=true, urlbordercolor={0 1 0}, citebordercolor={0 0
 
 \if0\blind
 
-{\title{\bf \tit\thanks{The most recent version (along with all
-      previous versions) of the {\bf R} package, {\bf mediation}, is
-      available for download at the Comprehensive R Archive Network
-      (\href{http://cran.r-project.org/web/packages/mediation}{http://cran.r-project.org/web/packages/mediation}.
-      This paper is based on version 2.0 of {\bf mediation}.
-      Financial support from the National Science Foundation
-      (SES-0752050) is acknowledged.}}
+{\title{\bf \tit\thanks{This paper is an updated version of the tutorial
+    for package {\bf mediation} which was previously published as \citet{imai:etal:10}.
+    The description is based on version 3.0 of {\bf mediation} and included as 
+    the package's vignette.
+    Financial support from the National Science Foundation
+    (SES-0752050) is acknowledged.}}
 
   \author{Kosuke Imai\thanks{Assistant Professor, Department of
       Politics, Princeton University, Princeton NJ 08544. Phone:
       609--258--6610, Email:
       \href{mailto:kimai@princeton.edu}{kimai@princeton.edu}, URL:
       \href{http://imai.princeton.edu}{http://imai.princeton.edu}}
-    \quad \quad Luke Keele\thanks{Assistant Professor, Department of
+    \quad \quad Luke Keele\thanks{Associate Professor, Department of
       Political Science, 2140 Derby Hall, Ohio State University,
       Columbus, OH 43210 Phone: 614-247-4256, Email:
-      keele.4@polisci.osu.edu} \quad \quad Dustin
-    Tingley\thanks{Ph.D. candidate, Department of Politics, Princeton
-      University, Princeton NJ 08544, Email: dtingley@princeton.edu}
+      keele.4@polisci.osu.edu}
+    \quad \quad Dustin Tingley\thanks{Assistant Professor, Government Department, Harvard University. Email:
+      \href{dtingley@gov.harvard.edu}{dtingley@princeton.edu}, URL:
+      \href{http://scholar.harvard.edu/dtingley}{http://scholar.harvard.edu/dtingley}}
     \quad \quad Teppei Yamamoto\thanks{Ph.D. candidate, Department of
       Politics, Princeton University, Princeton NJ 08544, Email: tyamamot@princeton.edu}
 }
 
-\date{
-  First Draft: June 13, 2009 \\
-  This Draft: July 13, 2009
+\date{ \today
+%  First Draft: June 13, 2009 \\
+%  This Draft: July 13, 2009
 }
 
 \maketitle
@@ -205,6 +205,10 @@ following command,
 \begin{verbatim}
 R> update.packages("mediation")
 \end{verbatim}
+
+\section{New Features in Version 3.0}
+
+
 
 \section{The Software}
 
